@startuml effects

title Effects
' left to right direction

package Effects {
	abstract Effect {
		- timeRemaining : double
		- holder : GameObject
		+ {abstract} applyToStudent(target : Student) : void
		+ {abstract} applyToTeacher(target : Teacher) : void
		+ applyToRoom(room : Room) : void
		+ interactCleanEffect(cleanEffect : CleanEffect) : void
		+ setHolder(holder : GameObject) : void
	}

	class BeerEffect
	class RagEffect
	class GasEffect
	class MaskEffect
	class CleanEffect
	class JanitorEffect

	together {
		Effect <|-- BeerEffect
		Effect <|-- RagEffect
		Effect <|-- GasEffect
		Effect <|-- MaskEffect
		Effect <|-- CleanEffect
		CleanEffect <|-- JanitorEffect
	}
	
}

interface Updatable {
	+ update(deltaTime : double) : void
}

abstract GameObject {
	+ {abstract} addItem(item : Item) : void
	+ {abstract} removeItem(item : Item) : void
	+ {abstract} applyEffect(effect : Effect) : void
	+ {abstract} interactTeacher(teacher : Teacher) : void
	+ addEffect(effect : Effect) : void
	+ removeEffect(effect : Effect) : void
}

class Mask
class WetRag 

Updatable <|.- Effect

Effect "holder" o- GameObject
MaskEffect "item" o-- Mask
RagEffect "item" o-- WetRag

@enduml